fix(progress-spinner): scrollbar shows because of spinner overflow

--- a/packages/components/progress-spinner/progress-spinner.scss
+++ b/packages/components/progress-spinner/progress-spinner.scss
@@ -13,6 +13,7 @@
 .kbq-progress-spinner {
     display: flex;
     flex-direction: row;
+    overflow-y: hidden;
 }
 
 .kbq-progress-spinner__circle {
